--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,30 +3,29 @@ project(actsTest)
 
 # soft installation path
 set(SW $ENV{HOME}/mpd/sw/slc7_x86-64)
-set(ACTS_SRC $ENV{HOME}/mpd/acts)
-set(Boost_DIR ${SW}/boost/latest/lib/cmake/Boost-1.83.0)
+set(ACTS_SRC ${SW}/ACTS/latest)
+set(Boost_DIR ${SW}/Boost/latest/lib/cmake/Boost-1.83.0)
+set(Acts_DIR ${SW}/ACTS/latest/lib/cmake/Acts)
+set(DD4hep_DIR ${SW}/DD4hep/latest/cmake)
+set(Geant4_DIR ${SW}/GEANT4/latest/lib/cmake/Geant4)
+set(ROOT_DIR ${SW}/ROOT/latest/cmake)
+set(nlohmann_json_DIR ${SW}/nlohmann_json/latest/share/cmake/nlohmann_json)
+set(LCIO_DIR ${SW}/LCIO/latest/lib/cmake/LCIO)
+set(SIO_DIR ${SW}/LCIO/latest/lib/cmake/SIO)
+set(EDM4HEP_DIR ${SW}/EDM4hep/latest/lib/cmake/EDM4HEP)
+set(podio_DIR ${SW}/podio/latest/lib/cmake/podio)
+
 find_package(Eigen3 REQUIRED HINTS "${SW}/Eigen3/latest")
 find_package(Acts REQUIRED)
 
 include_directories(
         ${SW}/TBB/latest/include
-        ${ACTS_SRC}/Examples/Detectors/TelescopeDetector/include
-        ${ACTS_SRC}/Examples/Detectors/MagneticField/include
-        ${ACTS_SRC}/Examples/Algorithms/Generators
-        ${ACTS_SRC}/Examples/Algorithms/Fatras/include
-        ${ACTS_SRC}/Examples/Algorithms/Digitization/include
-        ${ACTS_SRC}/Examples/Algorithms/TrackFinding/include
-        ${ACTS_SRC}/Examples/Algorithms/TruthTracking/
-        ${ACTS_SRC}/Examples/Run/Common/include
-        ${ACTS_SRC}/Examples/Io/Json/include
-        ${ACTS_SRC}/Examples/Io/Root/include
-        ${ACTS_SRC}/Examples/Io/Csv/include
+        ${SW}/nlohmann_json/latest/include/
 )
 link_directories(
         ${SW}/TBB/latest/lib
-        ${SW}/acts/latest/lib
+        ${SW}/ACTS/latest/lib
         )
-
 
 # main exec
 add_executable(${PROJECT_NAME} main.cpp)
@@ -50,7 +49,12 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
 
 # copy run macros
 set(SCRIPTS
-        digi-smearing-config.json)
+        digi-smearing-config.json
+        draw.C
+        analyse.C
+        read_particles.C
+        convert_urqmd_to_acts_format.C
+        )
 
 foreach (_script ${SCRIPTS})
     configure_file(${_script}
